@@ -29,17 +29,20 @@
 #include "bdetools_libbfio.h"
 #include "bdetools_libcerror.h"
 #include "bdetools_libcstring.h"
+#include "bdetools_libcsystem.h"
 #include "bdetools_libfdatetime.h"
 #include "info_handle.h"
 
-#define INFO_HANDLE_NOTIFY_STREAM		stdout
-
+#if !defined( LIBBDE_HAVE_BFIO )
 extern \
 int libbde_volume_open_file_io_handle(
      libbde_volume_t *volume,
      libbfio_handle_t *file_io_handle,
      int access_flags,
      libbde_error_t **error );
+#endif
+
+#define INFO_HANDLE_NOTIFY_STREAM		stdout
 
 /* Initializes the info handle
  * Returns 1 if successful or -1 on error
@@ -395,6 +398,52 @@ int info_handle_read_startup_key(
 	return( 1 );
 }
 
+/* Sets the volume offset
+ * Returns 1 if successful or -1 on error
+ */
+int info_handle_set_volume_offset(
+     info_handle_t *info_handle,
+     const libcstring_system_character_t *string,
+     libcerror_error_t **error )
+{
+	static char *function = "info_handle_set_volume_offset";
+	size_t string_length  = 0;
+	uint64_t value_64bit  = 0;
+
+	if( info_handle == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid info handle.",
+		 function );
+
+		return( -1 );
+	}
+	string_length = libcstring_system_string_length(
+	                 string );
+
+	if( libcsystem_string_decimal_copy_to_64_bit(
+	     string,
+	     string_length + 1,
+	     &value_64bit,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_COPY_FAILED,
+		 "%s: unable to copy string to 64-bit decimal.",
+		 function );
+
+		return( -1 );
+	}
+	info_handle->volume_offset = (off64_t) value_64bit;
+
+	return( 1 );
+}
+
 /* Opens the info handle
  * Returns 1 if successful, 0 if the keys could not be read or -1 on error
  */
@@ -482,11 +531,11 @@ int info_handle_open_input(
 /* Closes the info handle
  * Returns the 0 if succesful or -1 on error
  */
-int info_handle_close(
+int info_handle_close_input(
      info_handle_t *info_handle,
      libcerror_error_t **error )
 {
-	static char *function = "info_handle_close";
+	static char *function = "info_handle_close_input";
 
 	if( info_handle == NULL )
 	{
