@@ -54,6 +54,10 @@ struct mount_handle
 	/* The nofication output stream
 	 */
 	FILE *notify_stream;
+
+	/* Value to indicate if abort was signalled
+	 */
+	int abort;
 };
 
 int mount_handle_initialize(
@@ -83,12 +87,17 @@ int mount_handle_read_startup_key(
      const libcstring_system_character_t *filename,
      libcerror_error_t **error );
 
+int mount_handle_set_volume_offset(
+     mount_handle_t *mount_handle,
+     const libcstring_system_character_t *string,
+     libcerror_error_t **error );
+
 int mount_handle_open_input(
      mount_handle_t *mount_handle,
      const libcstring_system_character_t *filename,
      libcerror_error_t **error );
 
-int mount_handle_close(
+int mount_handle_close_input(
      mount_handle_t *mount_handle,
      libcerror_error_t **error );
 
